# switch_model_test

./: .gitignore  Cargo.toml  README.md
book/: book.toml
book/src/: chapter_1.md
models/modelA/core/src/: lib.rs
models/modelA/web/: Cargo.toml
models/modelB/core/src/: lib.rs
models/model_a/core/: Cargo.toml
models/model_a/core/src/: lib.rs
models/model_a/for_web/: Cargo.toml
models/model_a/for_web/src/: lib.rs
models/model_b/core/: Cargo.toml
models/model_b/core/src/: lib.rs
models/model_b/for_web/: Cargo.toml
models/model_b/for_web/src/: lib.rs
playground/: Cargo.toml  build_and_serve.py  index.html
playground/src/: main.rs
web/src/: lib.rs
web_builder/: Cargo.toml
web_builder/src/: lib.rs
web_model_api/: Cargo.toml
web_model_api/src/: lib.rs
